--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -8,22 +8,22 @@
         <div class="row">
             <form method="post" class="col-lg-8">
 
-                <input id="upload-input" class="btn-file" type="file" name="file" multiple></br>
+                <input id="upload-input" class="btn-file form-control" type="file" name="file" multiple></br>
 
                 <div class="form-group">
                     <label for="description">Description:</label></br>
-                    <input id="description" type="text" name="description"><br>
+                    <input id="description" class="form-control" type="text" name="description"><br>
                 </div>    
 
                 <div class="form-group">
                     <label for="script_name">Name:</label></br>
-                    <input id="script_name" type="text" name="script_name"><br>
+                    <input id="script_name" class="form-control"type="text" name="script_name"><br>
                 </div>    
 
                 <button id="submit-file-upload" class="btn btn-primary" type="button">Upload File</button>
 
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                    <div class="progress-bar progress-bar-striped active form-control" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                         <span class="sr-only">0%</span>
                     </div>
                 </div>
