--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -7,20 +7,25 @@
         <h2>Upload File</h2>
         <div class="row">
             <form method="post" class="col-lg-8">
-
+                </br>
                 <input id="upload-input" class="btn-file" type="file" name="file" multiple></br>
 
                 <div class="form-group">
-                    <label for="description">Description:</label></br>
-                    <input id="description" class="form-control" type="text" name="description"><br>
+                    <label for="description">Description:</label>
+                    <input id="description" class="form-control" type="text" name="description">
                 </div>
 
                 <div class="form-group">
-                    <label for="script_name">Name:</label></br>
-                    <input id="script_name" class="form-control"type="text" name="script_name"><br>
+                    <label for="script_link">Link:</label>
+                    <input id="script_link" class="form-control" type="text" name="script_link">
                 </div>
 
-                <button id="submit-file-upload" class="btn btn-primary" type="button">Upload File</button>
+                <div class="form-group">
+                    <label for="script_name">Name:</label>
+                    <input id="script_name" class="form-control" type="text" name="script_name">
+                </div>
+
+                <button id="submit-file-upload" class="btn btn-primary" type="submit">Upload File</button>
 
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
