--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,9 @@
 <html lang="en">
 	<head>
 		{% block head %}
-			<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+			<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 			<!--<link rel="stylesheet" href="http://bootswatch.com/darkly/bootstrap.min.css" crossorigin="anonymous">-->
-			<link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css" crossorigin="anonymous">
+			<link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css" crossorigin="anonymous">
 			<link href="/static/style.css" rel="stylesheet">
 			<link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
